{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 57,
  "lineage": "d88db727-1620-a010-a6a3-a3dfa33ff47d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nics",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/networkInterfaces/nic_vm_vnet1",
            "internal_domain_name_suffix": "v5soyt3tzteevcivhmu5cypiwb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm_vnet1_config",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1-1"
              }
            ],
            "location": "eastus",
            "name": "nic_vm_vnet1",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "rg-desafio2-from-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/networkInterfaces/nic_vm_vnet2",
            "internal_domain_name_suffix": "bqu2l0cwue4ejjrc1exqa2suja.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic_vm_vnet2_config",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet1-2"
              }
            ],
            "location": "eastus",
            "name": "nic_vm_vnet2",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "rg-desafio2-from-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-nsgs/providers/Microsoft.Network/networkSecurityGroups/nsg_subnet1",
            "location": "eastus",
            "name": "nsg_subnet1",
            "resource_group_name": "rg-nsgs",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_vnet1",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_resource_group.rg_nsgs"
          ]
        },
        {
          "index_key": "vnet2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-nsgs/providers/Microsoft.Network/networkSecurityGroups/nsg_subnet2",
            "location": "eastus",
            "name": "nsg_subnet2",
            "resource_group_name": "rg-nsgs",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_vnet2",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_resource_group.rg_nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-nsgs/providers/Microsoft.Network/networkSecurityGroups/nsg_subnet1/securityRules/allow_ssh_vnet1",
            "name": "allow_ssh_vnet1",
            "network_security_group_name": "nsg_subnet1",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-nsgs",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-desafio2",
            "azurerm_resource_group.rg_nsgs"
          ]
        },
        {
          "index_key": "vnet2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-nsgs/providers/Microsoft.Network/networkSecurityGroups/nsg_subnet2/securityRules/allow_ssh_vnet2",
            "name": "allow_ssh_vnet2",
            "network_security_group_name": "nsg_subnet2",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "rg-nsgs",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-desafio2",
            "azurerm_resource_group.rg_nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1-1",
            "name": "subnet1-1",
            "resource_group_name": "rg-desafio2-from-terraform",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_virtual_network.vnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet1-2",
            "name": "subnet1-2",
            "resource_group_name": "rg-desafio2-from-terraform",
            "virtual_network_name": "vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_virtual_network.vnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4fece4af-ccb3-4ac8-8915-3b29f161e8b1",
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "eastus",
            "name": "vnet1",
            "resource_group_name": "rg-desafio2-from-terraform",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1-1",
                "name": "subnet1-1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e8c5290c-a156-443c-a622-d92f00725448",
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet2",
            "location": "eastus",
            "name": "vnet2",
            "resource_group_name": "rg-desafio2-from-terraform",
            "subnet": [
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet2/subnets/subnet1-2",
                "name": "subnet1-2"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peerings",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vnet1",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet1/virtualNetworkPeerings/peering_vnet1_to_vnet2",
            "name": "peering_vnet1_to_vnet2",
            "remote_virtual_network_id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet2",
            "resource_group_name": "rg-desafio2-from-terraform",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_virtual_network.vnets",
            "null_resource.create_dependencies"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "vnet2",
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet2/virtualNetworkPeerings/peering_vnet2_to_vnet1",
            "name": "peering_vnet2_to_vnet1",
            "remote_virtual_network_id": "/subscriptions/038bd2ab-7c4b-4cb1-90f4-8b811c7b3fc7/resourceGroups/rg-desafio2-from-terraform/providers/Microsoft.Network/virtualNetworks/vnet1",
            "resource_group_name": "rg-desafio2-from-terraform",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg-desafio2",
            "azurerm_virtual_network.vnets",
            "null_resource.create_dependencies"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}